--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,25 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    // 리사이클러뷰를 다루기 위한 라이브러리
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    // material 디자인 라이브러리
+    implementation "com.google.android.material:material:1.2.0-alpha05"
+    // 이미지 url 로딩 라이브러리
+    implementation "com.github.bumptech.glide:glide:4.11.0"
+    // 동그란 이미지 커스텀 뷰 라이브러리
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    // Retrofit 라이브러리
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    // Retrofit 라이브러리 응답으로 가짜 객체를 만들기 위해
+    implementation 'com.squareup.retrofit2:retrofit-mock:2.6.2'
+    // 객체 시리얼라이즈를 위한 Gson 라이브러리
+    implementation 'com.google.code.gson:gson:2.8.6'
+    // Retrofit 에서 Gson 을 사용하기 위한 라이브러리
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    // 추천 키워드 flowlayout
+    implementation 'com.nex3z:flow-layout:1.2.4'
+    // Coordinator 사용 라이브러리
+    implementation 'com.android.support:support-annotations:27.1.1'
+
 }
