[hayoung] LibraryActivity, LibraryFragment 순서로 옮기는 중
util 폴더와 color 폴더 생성하였음.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,13 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.JoinFinishActivity"></activity>
+        <activity android:name=".activity.LibraryActivity"></activity>
+        <activity android:name=".activity.JoinFinishActivity" />
         <activity android:name=".activity.JoinStep1PolicyActivity" />
         <activity android:name=".activity.JoinStep2Activity" />
-        <activity android:name=".activity.JoinStep1Activity">
-
-        </activity>
-        <activity android:name=".activity.JoinStep3Activity"
+        <activity android:name=".activity.JoinStep1Activity"></activity>
+        <activity
+            android:name=".activity.JoinStep3Activity"
             android:windowSoftInputMode="stateVisible">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,10 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.LoginActivity"
-            android:windowSoftInputMode="adjustResize">
-
-        </activity>
+        <activity
+            android:name=".activity.LoginActivity"
+            android:windowSoftInputMode="adjustResize"></activity>
         <activity android:name=".activity.MainActivity" />
     </application>
 
