--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".activity.SettingActivity" />
-        <activity android:name=".activity.LibraryActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".activity.LibraryActivity"/>
 
         <activity android:name=".activity.JoinFinishActivity" />
         <activity android:name=".activity.JoinStep1PolicyActivity" />
@@ -25,12 +19,20 @@
         <activity
             android:name=".activity.JoinStep3Activity"
             android:windowSoftInputMode="stateVisible">
-
         </activity>
         <activity
             android:name=".activity.LoginActivity"
             android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.WritingSentenceActivity" />
+        <activity android:name=".activity.WritingThemeActivity" />
+
+        <activity android:name=".activity.MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
