--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,15 +25,17 @@
             android:windowSoftInputMode="stateVisible"></activity>
         <activity
             android:name=".activity.LoginActivity"
-            android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".activity.WritingSentenceActivity" />
-        <activity android:name=".activity.WritingThemeActivity" />
-        <activity android:name=".activity.MainActivity">
+            android:windowSoftInputMode="adjustResize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.WritingSentenceActivity" />
+        <activity android:name=".activity.WritingThemeActivity" />
+        <activity android:name=".activity.MainActivity">
+
         </activity>
     </application>
 
