--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,12 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.ServiceTermsActivity">
-
-        </activity>
-        <activity android:name=".activity.ServicePolicyActivity" >
-
-        </activity>
+        <activity android:name=".activity.ServiceTermsActivity" />
+        <activity android:name=".activity.ServicePolicyActivity" />
         <activity
             android:name=".activity.DetailThemeActivity"
             android:label="@string/title_activity_detail_theme" />
@@ -26,25 +22,27 @@
         <activity android:name=".activity.SettingActivity" />
         <activity android:name=".activity.LibraryActivity" />
         <activity android:name=".activity.JoinFinishActivity" />
-        <activity android:name=".activity.PrivacyTermsActivity">
+        <activity android:name=".activity.PrivacyTermsActivity" />
+        <activity android:name=".activity.JoinStep2Activity" />
+        <activity android:name=".activity.JoinStep1Activity" >
 
         </activity>
-        <activity android:name=".activity.JoinStep2Activity" />
-        <activity android:name=".activity.JoinStep1Activity" />
         <activity
             android:name=".activity.JoinStep3Activity"
             android:windowSoftInputMode="stateVisible" />
         <activity
             android:name=".activity.LoginActivity"
-            android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".activity.WritingSentenceActivity" />
-        <activity android:name=".activity.WritingThemeActivity" />
-        <activity android:name=".activity.MainActivity">
+            android:windowSoftInputMode="adjustResize" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".activity.WritingSentenceActivity" />
+        <activity android:name=".activity.WritingThemeActivity" />
+        <activity android:name=".activity.MainActivity">
+
         </activity>
     </application>
 
