[Implement Features] 큐레이터 테마 이미지, library 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation "com.google.android.material:material:1.2.0-alpha05"
     // 이미지 url 로딩 라이브러리
     implementation "com.github.bumptech.glide:glide:4.11.0"
+    // 이미지 blur
+    implementation 'jp.wasabeef:glide-transformations:4.2.0'
     // 동그란 이미지 커스텀 뷰 라이브러리
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     // Retrofit 라이브러리
