--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //ted permission 권한 요청 라이브러리
+    implementation "gun0912.ted:tedpermission:2.1.0"
     // 리사이클러뷰를 다루기 위한 라이브러리
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     // material 디자인 라이브러리
