--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,17 +40,16 @@
         <activity
             android:name=".activity.LoginActivity"
             android:windowSoftInputMode="adjustResize">
-
-        </activity>
-        <activity android:name=".activity.WritingSentenceActivity" />
-        <activity android:name=".activity.WritingThemeActivity" />
-        <activity android:name=".activity.MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.WritingSentenceActivity" />
+        <activity android:name=".activity.WritingThemeActivity" />
+        <activity android:name=".activity.MainActivity" />
+
     </application>
 
 </manifest>
