[Implement Features] 큐레이터 상세보기 통신 완료

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
         <activity android:name=".activity.CuratorInfoActivity" />
         <activity android:name=".activity.ServiceTermsActivity" />
         <activity android:name=".activity.ServicePolicyActivity" />
+        <activity android:name=".activity.SentenceDetailNoThemeActivity" />
         <activity android:name=".activity.SentenceDetailViewActivity" />
         <activity
             android:name=".activity.DetailThemeActivity"
