[Implement Features] - 테마에 문장 쓰기 flow 연결 2. 책 검색 ~ing

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.ThemeWritingSentenceBookActivity"></activity>
+        <activity android:name=".activity.ThemeWritingSentenceBookSearchActivity"></activity>
+        <activity android:name=".activity.ThemeWritingSentenceBookActivity" />
         <activity android:name=".activity.WritingSentenceInThemeActivity" />
         <activity android:name=".activity.ChangePasswordActivity" />
         <activity android:name=".activity.AccountSettingActivity" />
