--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.ThemeWritingSentenceFinishActivity"></activity>
+        <activity android:name=".activity.ModifyActivity"></activity>
+        <activity android:name=".activity.ThemeWritingSentenceFinishActivity" />
         <activity android:name=".activity.OnBoardingActivity" />
         <activity android:name=".activity.WritingSentenceInThemeActivity" />
         <activity android:name=".activity.ChangePasswordActivity" />
@@ -34,8 +35,8 @@
         <activity android:name=".activity.ServiceTermsActivity" />
         <activity android:name=".activity.ServicePolicyActivity" />
         <activity android:name=".activity.SentenceDetailViewActivity" />
-        <activity android:name=".activity.ThemeWritingSentenceBookActivity"/>
-        <activity android:name=".activity.ThemeWritingSentenceBookSearchActivity"/>
+        <activity android:name=".activity.ThemeWritingSentenceBookActivity" />
+        <activity android:name=".activity.ThemeWritingSentenceBookSearchActivity" />
         <activity
             android:name=".activity.DetailThemeActivity"
             android:label="@string/title_activity_detail_theme" />
@@ -55,10 +56,8 @@
             android:name=".activity.LoginActivity"
             android:windowSoftInputMode="adjustResize" />
         <activity android:name=".activity.WritingSentenceActivity" />
-        <activity android:name=".activity.ThemeWritingSentenceBookActivity" />
-        <activity android:name=".activity.ThemeWritingSentenceBookSearchActivity" />
         <activity android:name=".activity.WritingThemeActivity" />
-        <activity android:name=".activity.MainActivity"></activity>
+        <activity android:name=".activity.MainActivity" />
     </application>
 
 </manifest>
