[Refactor Codes] 수정 삭제 더보기 xml은 완성. more 체크 박스 클릭 시 수정 삭제 뷰 뜸.
ModifyLibraryWrittenSentenceActivity.kt 에서
1.
41-62 번째 줄 : 원하는 값 받아오려고 하는데 랜덤으로 값이 전달되어 온다.

2. 63-90 번쨰 줄 오류
수정하기 버튼 누르면 바로 앱 꺼짐.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.ModifyActivity"></activity>
+        <activity android:name=".activity.ModifyLibraryWrittenSentenceActivity"></activity>
         <activity android:name=".activity.ThemeWritingSentenceFinishActivity" />
         <activity android:name=".activity.OnBoardingActivity" />
         <activity android:name=".activity.WritingSentenceInThemeActivity" />
