[Refactor Codes] 삭제 기능 구현 완료
dialog에서 통신하는 것을 찾기 힘들어서 dialog를 activity로 구현하여 기능을 완성시킴.

남은 것 refresh issue

삭제 기능 구현 완료이지만 finish() 후에 바로 바뀌지 않고 새로고침 되어야 적용됨.
위에 숫자는 아예 다른 탭을 다녀와야 바뀌어있음.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
 
     <application
         android:allowBackup="false"
-        tools:replace="android:allowBackup"
         android:fullBackupContent="false"
         android:fullBackupOnly="false"
         android:icon="@mipmap/ic_appicon"
@@ -18,8 +17,10 @@
         android:roundIcon="@mipmap/ic_appicon_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        <activity android:name=".activity.ModifyLibraryWrittenSentenceActivity"></activity>
+        android:usesCleartextTraffic="true"
+        tools:replace="android:allowBackup">
+        <activity android:name=".activity.LibraryWrittenSentenceDeleteActivity"></activity>
+        <activity android:name=".activity.ModifyLibraryWrittenSentenceActivity" />
         <activity android:name=".activity.ThemeWritingSentenceFinishActivity" />
         <activity android:name=".activity.OnBoardingActivity" />
         <activity android:name=".activity.WritingSentenceInThemeActivity" />
