--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity android:name=".activity.ModifyLibraryWrittenSentenceActivity" />
         <activity android:name=".activity.ThemeWritingSentenceFinishActivity" />
         <activity android:name=".activity.OnBoardingActivity" />
-        <activity android:name=".activity.WritingSentenceInThemeActivity" />
+        <activity android:name=".activity.WritingSentenceInThemeActivity"
+            android:windowSoftInputMode="adjustResize"/>
         <activity android:name=".activity.ChangePasswordActivity" />
         <activity android:name=".activity.AccountSettingActivity" />
         <activity android:name=".activity.SplashActivity">
