--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:usesCleartextTraffic="true"
         tools:replace="android:allowBackup">
         <activity android:name="com.mongle.mongleandroid_release.activity.OpenSourceDetailActivity"></activity>
-        <activity android:name="com.mongle.mongleandroid_release.activity.ModifyLibraryWrittenSentenceActivity" />
+        <activity android:name="com.mongle.mongleandroid_release.activity.ModifyLibraryWrittenSentenceActivity"
+            android:windowSoftInputMode="adjustResize"/>
         <activity android:name="com.mongle.mongleandroid_release.activity.ThemeWritingSentenceFinishActivity" />
         <activity android:name="com.mongle.mongleandroid_release.activity.OnBoardingActivity" />
         <activity android:name="com.mongle.mongleandroid_release.activity.ThemeWritingSentenceActivity"
